# badprog-electronics-stm32-stm32f3discovery-led-ring-rotation-with-tim2-and-nvic

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
firmware/stm32f3discovery/: CMakeLists.txt  stm32f303xc_flash.ld
firmware/stm32f3discovery/cmake/: arm-none-eabi.cmake
firmware/stm32f3discovery/inc/: stm32f303xc.h
firmware/stm32f3discovery/src/: main.c  startup_stm32f303xc.s  syscall.c  sysmem.c
